Updated build scripts to fully build the executable.